--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -8,6 +8,10 @@
   background-color: white;
   @include adaptiveValue("height", 87, 65);
   &__container {
+    @media (min-width: $tablet) {
+      padding-right: 0;
+      padding-left: 0;
+    }
     @include adaptiveValue("height", 87, 65);
     @media (max-width: $mobile) {
       display: flex;
