--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -12,10 +12,8 @@
 
 //========================================================================================================================================================
 .main {
-  margin-top: -40px;
   margin-bottom: 100px;
   &__container {
-    padding-top: 87px;
     @include adaptiveValue("padding-top", 87, 65);
     display: flex;
     flex-direction: column;
@@ -72,8 +70,7 @@
   @include adaptiveValue("font-size", 18, 34);
   font-family: "Gilroy-Bold";
   transform: rotate(180deg);
-  display: inline;
-  writing-mode: tb-rl;
+  writing-mode: vertical-lr;
   color: $grayColor;
   @media (max-width: $mobile) {
     align-self: flex-end;
