--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -55,8 +55,11 @@ body {
   display: grid;
   overflow: hidden;
   grid-template-rows: auto 1fr auto;
+  opacity: 0;
+  transition: all 0.9s ease-out 0.1s;
   // Сайт загружен
   .loaded & {
+    opacity: 1;
   }
 }
 
